# eclipsa-audio-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
.github/: pull_request_template.md
.github/instructions/: development-guidelines.md
.github/workflows/: build_and_sign.yml  cmake-macos.yml
audioelementplugin/: CMakeLists.txt
audioelementplugin/src/: AudioElementPluginEditor.cpp  AudioElementPluginEditor.h  AudioElementPluginProcessor.cpp  AudioElementPluginProcessor.h  AudioElementVersionConverter.cpp  AudioElementVersionConverter.h
audioelementplugin/src/screens/: PositionSelectionScreen.cpp  PositionSelectionScreen.h  RoomViewScreen.cpp  RoomViewScreen.h  TrackMonitorScreen.cpp  TrackMonitorScreen.h
audioelementplugin/test/: AudioElementVersionConverter_test.cpp  CMakeLists.txt
cmake/: boost.cmake  copy_resources.cmake  eclipsa_test.cmake  eigen.cmake  libspatialaudio.cmake  pffft.cmake  zeromq.cmake
common/: CMakeLists.txt
common/components/: components.cpp  components.h
common/components/icons/: CMakeLists.txt
common/components/src/: AEContainerSet.h  AEStripComponent.cpp  AEStripComponent.h  ChannelListComponent.cpp  ChannelListComponent.h  ColouredLight.h  ControlKnob.cpp  ControlKnob.h  ControlKnobSkewed.cpp  ControlKnobSkewed.h  DAWCompatibilityChecker.h  DAWWarningBanner.h  DialIndicator.h  EclipsaColours.h  GainControlTextEditor.h  HeaderBar.h  Icons.h  ImageTextButton.h  MainEditor.h  MixAEContainer.h  PresentationTab.h  RoomSetupScreen.cpp  RoomSetupScreen.h  RoundedRectangle.h  SegmentedToggleButton.cpp  SegmentedToggleButton.h  SegmentedToggleImageButton.cpp  SegmentedToggleImageButton.h  SelectionBox.h  SelectionButton.h  SliderButton.h  SliderLabelAttachment.cpp  SliderLabelAttachment.h  TextEditorControlledDial.cpp  TextEditorControlledDial.h  TitledLabel.h  TitledTextBox.h  Viewports.h
common/data_repository/: data_repository.h
common/data_repository/tests/: CMakeLists.txt  (+11 more)
common/data_structures/: data_structures.cpp  data_structures.h
common/logger/: logger.cpp  logger.h
common/processors/: processors.cpp  processors.h
common/substream_rdr/: substream_rdr.cpp  substream_rdr.h
rendererplugin/: CMakeLists.txt
rendererplugin/src/: RendererEditor.cpp  RendererEditor.h  RendererPluginSyncServer.h  RendererProcessor.cpp  RendererProcessor.h  RendererVersionConverter.cpp  RendererVersionConverter.h
rendererplugin/test/: CMakeLists.txt  RendererProcessor_test.cpp  RendererVersionConverter_test.cpp
scripts/: distribution.xml  distribution_aax.xml  distribution_au.xml  distribution_vst3.xml  package.sh  package_ci.sh  package_config.sh.example  postinstall  postinstall_au  postinstall_vst3  preinstall_au  preinstall_vst3
(+205 files in other folders)
