# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

juce_add_plugin(AudioElementPlugin
    PLUGIN_MANUFACTURER_CODE ${ECLIPSA_MANUFACTURER_CODE}
    BUNDLE_ID "${ECLIPSA_PANNER_BUNDLE_ID}"
    COMPANY_NAME "${ECLIPSA_COMPANY_NAME}"
    NEEDS_MIDI_INPUT FALSE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD TRUE
    FORMATS ${PLUGIN_FORMATS}
    PRODUCT_NAME "Eclipsa Audio Element Plugin"
    AAX_CATEGORY "AAX_ePlugInCategory_SoundField")

target_sources(AudioElementPlugin 
    PRIVATE
        src/AudioElementPluginProcessor.cpp
        src/AudioElementPluginEditor.cpp
        src/screens/RoomViewScreen.cpp
        src/screens/PositionSelectionScreen.cpp
        src/screens/TrackMonitorScreen.cpp)

target_compile_definitions(AudioElementPlugin
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_SILENCE_XCODE_15_LINKER_WARNING
        JUCE_ENABLE_LIVE_CONSTANT_EDITOR=1
        JucePlugin_Category="Spatial")

target_link_options(AudioElementPlugin
    PUBLIC
        "-Wl"
        "-ld_classic")

target_compile_definitions(AudioElementPlugin
    PUBLIC LOG_FILE_PATH="${LOG_FILE_PATH}")


target_link_libraries(AudioElementPlugin
    PRIVATE
        substream_rdr
        processors
        components
        logger
        data_repository
        data_structures
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags)

if(CI_TEST OR INTERNAL_TEST)
    add_subdirectory(test)
endif()
if(BUILD_AAX)
    message(STATUS "AAX build. Setting up AudioElementplugin path and copying resources.")
    include("${CMAKE_SOURCE_DIR}/cmake/copy_resources.cmake")
    set(AUDIO_PLUGIN_PATH "${CMAKE_BINARY_DIR}/audioelementplugin/AudioElementPlugin_artefacts/Release/AAX/Eclipsa Audio Element Plugin.aaxplugin")
    copy_resources(AudioElementPlugin ${AUDIO_PLUGIN_PATH})
else()
    message(STATUS "Non-AAX build detected. Skipping resource setup and resource copy for AudioElementPlugin.")
endif()
